--- a/views/components/globals.html
+++ b/views/components/globals.html
@@ -16,7 +16,7 @@
         new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
       j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-T56C5T7');</script>
+    })(window,document,'script','dataLayer', '{{ gtmAccountId }}' );</script>
     <!-- End Google Tag Manager -->
 
 {% if environment === 'production' %}
@@ -42,7 +42,7 @@
 
 {% block bodyStart %}
     <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T56C5T7" title="GTM" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{ gtmAccountId }}" title="GTM" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
     <noscript> <img alt="no javascript" src="/assets/images/noJS.png" width="1" height="1" /></noscript>
