--- a/views/components/contact-us.html
+++ b/views/components/contact-us.html
@@ -28,7 +28,7 @@
               <div id="__8x8-chat-button-container-script_1553624711656480310cfd53.70557078"></div>
           </div>
         </div>
-      {% endif %}      
+      {% endif %}
     {% endif %}
     {% if contactUsWebFormEnabled %}
         {% if not isIba %}
@@ -56,7 +56,7 @@
           <p class="govuk-body govuk-!-margin-bottom-2">{{ commonContent[htmlLang].contactUs.telephone.Scotland.ibca.emailText }}
               <a href="mailto:{{ commonContent[htmlLang].contactUs.telephone.Scotland.ibca.emailAddress }}" class="govuk-link">{{ commonContent[htmlLang].contactUs.telephone.Scotland.ibca.emailAddress }}</a>
           </p>
-    
+
           {% if ((htmlLang == "en") or (htmlLang == "cy" and welshWebchatEnabled))  %}
           <h3 class="govuk-heading-s govuk-!-margin-bottom-0">{{ commonContent[htmlLang].contactUs.telephone.England.ibca.desc }}</h3>
           <p class="govuk-body govuk-!-margin-bottom-0">{{ commonContent[htmlLang].contactUs.telephone.England.ibca.phone }}</p>
@@ -66,7 +66,7 @@
               <a rel="noopener noreferrer" class="govuk-link" href="https://www.gov.uk/call-charges" target="_blank">{{ commonContent[htmlLang].contactUs.telephone.England.ibca.charges }}</a>
           </p>
           <p class="govuk-body govuk-!-margin-bottom-2">{{ commonContent[htmlLang].contactUs.telephone.England.ibca.emailText }}
-              <a href="mailto:{{ commonContent[htmlLang].contactUs.telephone.England.emailAddress }}" class="govuk-link">{{ commonContent[htmlLang].contactUs.telephone.England.ibca.emailAddress }}</a>
+              <a href="mailto:{{ commonContent[htmlLang].contactUs.telephone.England.ibca.emailAddress }}" class="govuk-link">{{ commonContent[htmlLang].contactUs.telephone.England.ibca.emailAddress }}</a>
           </p>
           {% endif %}
 
@@ -78,7 +78,7 @@
               <a rel="noopener noreferrer" class="govuk-link" href="https://www.gov.uk/call-charges" target="_blank">{{ commonContent[htmlLang].contactUs.telephone.WelshSpeakers.ibca.charges }}</a>
           </p>
         </div>
-      {% else %} 
+      {% else %}
         <div class="govuk-details__text">
           <h2 class="govuk-heading-m govuk-!-margin-bottom-0">{{ commonContent[htmlLang].contactUs.telephone.title }}</h2>
           <p class="govuk-body govuk-!-margin-bottom-2">{{ commonContent[htmlLang].contactUs.telephone.desc }}</p>
@@ -119,6 +119,6 @@
               <a href="mailto:{{ commonContent[htmlLang].contactUs.telephone.Scotland.emailAddress }}" class="govuk-link">{{ commonContent[htmlLang].contactUs.telephone.Scotland.emailAddress }}</a>
           </p>
         </div>
-      {% endif %}  
+      {% endif %}
     {% endif %}
 </details>
