--- a/views/components/common/radio.njk
+++ b/views/components/common/radio.njk
@@ -1,19 +1,29 @@
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 
-{% macro govRadio(fieldName, headerText = "", isPageHeading = false, hint = null, classes = "govuk-fieldset__legend--m", items) %}
+{% macro govRadio(field, headerText = "", isPageHeading = false, hideQuestion = true, hint = null, classes = "govuk-fieldset__legend--m", items) %}
 
   {{ govukRadios({
-    name: fieldName,
+    name: field.id,
     fieldset: {
       legend: {
         text: headerText,
         isPageHeading: isPageHeading,
-        classes: classes
+        classes: classes + " govuk-visually-hidden" if hideQuestion
       }
     },
     hint: {
       text: hint
     } if hint else undefined,
-    items: items
+    items: items,
+    errorMessage: null if field.errors.length == 0 else {text: getErrors(field)}
   }) }}
 {% endmacro %}
+
+{% macro getErrors(field) %}
+  {% if field.errors %}
+    {% for error in field.errors %}
+        {{ error }}
+    {% endfor %}
+  {% endif %}
+{% endmacro %}
+
