--- a/views/components/common/radio.njk
+++ b/views/components/common/radio.njk
@@ -8,7 +8,7 @@
       legend: {
         text: headerText,
         isPageHeading: isPageHeading,
-        classes: classes + " govuk-visually-hidden" if hideQuestion
+        classes: classes + " govuk-visually-hidden" if hideQuestion else classes
       }
     },
     hint: {
