--- a/views/components/common/checkbox.njk
+++ b/views/components/common/checkbox.njk
@@ -1,4 +1,5 @@
 {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
+{% from "components/common/errors.njk" import getErrors %}
 
 {% macro govCheckbox(field, headerText = "", isPageHeading = false, hideQuestion = true, hint = null, classes = "govuk-fieldset__legend--m", items) %}
     {{ govukCheckboxes({
@@ -18,11 +19,3 @@
     }) }}
 {% endmacro %}
 
-
-{% macro getErrors(field) %}
-  {% if field.errors %}
-    {% for error in field.errors %}
-        {{ error }}
-    {% endfor %}
-  {% endif %}
-{% endmacro %}
