Adding novalidate to properly remove browser validation

--- a/views/layouts/question.html
+++ b/views/layouts/question.html
@@ -26,6 +26,7 @@
           {% if config.autocomplete %}
               autocomplete="{{ config.autocomplete }}"
           {% endif %}
+          novalidate
     >
         {% block fields -%}
         {%- endblock %}
