--- a/views/components/common/textInput.njk
+++ b/views/components/common/textInput.njk
@@ -1,4 +1,5 @@
 {% from "govuk/components/input/macro.njk" import govukInput %}
+{% from "components/common/errors.njk" import getErrors %}
 
 {% macro govTextInput(field, labelText = "", isPageHeading = false, hideLabel = false, hint = null, classes = "", width = "") %}
     {{ govukInput({
@@ -16,12 +17,4 @@
           errorMessage: null if field.errors.length == 0 else {text: getErrors(field)},
       classes: " govuk-input--width-" + width if width else ""
     }) }}
-{% endmacro %}
-
-{% macro getErrors(field) %}
-  {% if field.errors %}
-    {% for error in field.errors %}
-        {{ error }}
-    {% endfor %}
-  {% endif %}
 {% endmacro %}
