--- a/views/components/fields.njk
+++ b/views/components/fields.njk
@@ -174,6 +174,7 @@
 
   <select id="{{ field.id }}"
           name="{{ field.id }}"
+          aria-label="{{ field.id }}"
           class="govuk-select">
     {# Default option so no option is preselected #}
     <option disabled
