--- a/views/components/delete-warning.html
+++ b/views/components/delete-warning.html
@@ -1,12 +1,12 @@
-<div id="archive-dialog" class="modal">
+<div id="delete-dialog" class="modal">
     <div class="modal-dialog-box" role="dialog" aria-labelledby="aria-timeout-label">
         <span class="govuk-visually-hidden-focusable" id="aria-timeout-label">
         </span>
         <h2 class="icon-important red-inverse">{{ content.dialog.title }}</h2>
         <p class="govuk-body">{{ content.dialog.warnMessage }}</p>
         <p>
-            <button class="govuk-button extend archive-warning-button" id="extend" href="#" rel="modal:close">{{ content.dialog.buttons.save }}</button>
-            <button class="govuk-button govuk-button--secondary abort" id="archive" href="#">{{ content.dialog.buttons.archive }}</button>
+            <button class="govuk-button extend delete-warning-button" id="extend" href="#" rel="modal:close">{{ content.dialog.buttons.save }}</button>
+            <button class="govuk-button govuk-button--secondary abort" id="delete" href="#">{{ content.dialog.buttons.delete }}</button>
         </p>
     </div>
 </div>
