Sscsci 1611: mrn/rdn error message fix and radio button fix (#1601)
* SSCSCI-1611: Adding path to gain access to radio component

* SSCSCI-1611: Removing browser validation from date fields

* SSCSCI-1611: Making extended title optional so fieldset can be header if no extra text on page

* SSCSCI-1611: Importing gov component radio to use through own macro

* SSCSCI-1611: Importing new radio component

* SSCSCI-1611: Importing radio component and clean up

* SSCSCI-1611: Reverting design changes but cleaning params

* SSCSCI-1611: Fixes to radio component for error line and message and hideQuestion option

* Refactoring the appellant-role based on radio changes

* SSCSCI-1611: Refactoring appellant in mainland uk page

* SSCSCI-1611: Text message radio refactor

* SSCSCI-1611: Rep pages with new radio component

* SSCSCI-1611: evidence-provide page refactored with radio

* SSCSCI-1611: The hearing pages with gov radio component

* SSCSCI-1603:Create account page with new gov radio component

* SSCSCI-1611: availability page radio and formatting of appellant role

* SSCSCI-1611: Fixing all playwright tests due to new radio id

* SSCSCI-1611: fixing smoke test

* temp fix for smoke

* SSCSCI:1611: Refactoring smoke test change

* Mess up Timi's PR

* Adding gov buttons again and formatting

* Implementing the gov radio

* Implementing gov radio and removing unused references to selectionbutton

* Changing to radio buttons for other benefit type journey

* Implementing gov radio and js function for language preferences and fixing javascript for components

* Removing unused imports

* SSCSCI-1611: Adding checkbox and implementing on arrangements

* SSCSCI-1611: Implementing new checkbox on hearing options

* SSCSCI-1611: Adding deprecated comment to selectionButton and removing selectionButtons

* Lint fix

* Fixing testds again

* Fixing tests due to locator id change

* More e2e test locator changes

* Changing checkbox id to name for e2e

* Moving getErrors to file 

--- a/views/layouts/question.html
+++ b/views/layouts/question.html
@@ -16,8 +16,9 @@
 
 {% block two_thirds %}
     {{ errorSummary(fields, commonContent[htmlLang].errorSummaryHeading) }}
-    {{ header(title, size='l', fieldsValidated=fields.validated, fieldsValid=fields.valid) }}
-
+    {% if title %}
+        {{ header(title, size='l', fieldsValidated=fields.validated, fieldsValid=fields.valid) }}
+    {% endif %}
     <form enctype="{{ enc_type | default('application/x-www-form-urlencoded') }}"
           action="{{ postUrl | default(path if path else url) }}"
           method="post"
@@ -25,6 +26,7 @@
           {% if config.autocomplete %}
               autocomplete="{{ config.autocomplete }}"
           {% endif %}
+          novalidate
     >
         {% block fields -%}
         {%- endblock %}
