--- a/views/components/navigation.html
+++ b/views/components/navigation.html
@@ -2,12 +2,12 @@
 <header class="govuk-header " role="banner" data-module="header">
     <div class="govuk-header__container govuk-width-container">
         <div class="govuk-header__logo">
-            <span class="govuk-header__logotype">
-                <img  src="/assets/images/hmcts-logo-compress.svg" alt="{{ i18n.general.logo }}" >
+            <span class="govuk-header__logotype govuk-header__link--homepage">
+                <img src="/assets/images/hmcts-logo-compress.svg" alt="{{ i18n.general.logo }}" >
             </span>
         </div>
         <div class="govuk-header__content">
-            <a href="/" class="govuk-header__link govuk-header__link--service-name">
+            <a href="/" class="govuk-header__link govuk-header__service-name">
                 {{ commonContent[htmlLang].ibca.serviceName if isIba else commonContent[htmlLang].serviceName }}
             </a>
         </div>
