--- a/views/components/contact-us.html
+++ b/views/components/contact-us.html
@@ -96,7 +96,7 @@
           </p>
           {% endif %}
 
-          {% if featureToggles.allowNI %}
+          {% if allowNiEnabled %}
           <h3 class="govuk-heading-s govuk-!-margin-bottom-0">{{ commonContent[htmlLang].contactUs.telephone.WelshSpeakers.descNI }}</h3>
           {% else%}
           <h3 class="govuk-heading-s govuk-!-margin-bottom-0">{{ commonContent[htmlLang].contactUs.telephone.WelshSpeakers.desc }}</h3>
@@ -113,7 +113,7 @@
           </p>
           {% endif %}
 
-          {% if featureToggles.allowNI %}
+          {% if allowNiEnabled %}
           <h3 class="govuk-heading-s govuk-!-margin-bottom-0">{{ commonContent[htmlLang].contactUs.telephone.Scotland.descNI }}</h3>
           {% else%}
           <h3 class="govuk-heading-s govuk-!-margin-bottom-0">{{ commonContent[htmlLang].contactUs.telephone.Scotland.desc }}</h3>
