SSCSCI-1812 - NI changes final (#1707)
* add NI

* update IBC appeals text NI

* fix typo

* update lock

* reverse to yarn 3.6.1

* fix yarn

* fix yarn

* fix yarn

* usr pr as sscs api

* Bumping chart version/ fixing aliases

* usr pr as sscs api

* usr pr as sscs api

* revert helm chart change

* Bumping chart version/ fixing aliases

* usr pr as sscs api

* Update Chart.yaml

* Bumping chart version/ fixing aliases

* overwrite TRIBUNALS_CASE_API_URL

* Update Chart.yaml

* overwrite TRIBUNALS_CASE_API_URL

* Bumping chart version/ fixing aliases

* Implement english NI content

* Implement Welsh NI content

* Remove yarn.lock from PR

* Resolve yarn.lock conflict by using version from main

* Resolve yarn.lock conflict by using version from main

* Update unit tests to handle questionNI content

* revert helm bump

* add NI welsh

* add controller tests for NI postcodes

* Update controllerNI.test.js

* Update controller.js

* add bcNiPostcodes feature flag

* Revert "add bcNiPostcodes feature flag"

This reverts commit 13d2344860bcf031590d109f8ef1409de2de42dc.

* add bcNiPostcodes feature flag

* add custom var for NI

* typo

* typo

* Revert last 4 commits back to 07664e2

* Remove feature toggle

* setup Ni feature flag

* remove dead code

* Ni postcode lookup

* Ni postcode lookup

* Ni tests fix

* Ni tests fix

* Update appellantDetails.js

* Ni tests fix

* Ni tests fix

* Ni tests fix

* Ni tests sonar fix

* Ni tests sonar fix

* fix ni functional tests

* set alloNI to false by default

* enable allowNI

* update contentIba json files

* update contentIba json files

* update contentIba json files

* overwrite textboxLabelNI

* update textboxLabelNI set ni feature to false

* replace nunjucx by simple if

* change env name for NI

* force NI to false

* force tamplate to not NI

* new allow NI

* fix allowNiEnabled

* Update language-preference.js

* Update language-preference.js

* Update language-preference.js

* Update language-preference.js



--- a/views/components/contact-us.html
+++ b/views/components/contact-us.html
@@ -47,18 +47,12 @@
           <h2 class="govuk-heading-m govuk-!-margin-bottom-0">{{ commonContent[htmlLang].contactUs.telephone.title }}</h2>
           <p class="govuk-body govuk-!-margin-bottom-2">{{ commonContent[htmlLang].contactUs.telephone.desc }}</p>
 
-          <h3 class="govuk-heading-s govuk-!-margin-bottom-0">{{ commonContent[htmlLang].contactUs.telephone.Scotland.ibca.desc }}</h3>
-          <p class="govuk-body govuk-!-margin-bottom-0">{{ commonContent[htmlLang].contactUs.telephone.Scotland.ibca.phone }}</p>
-          <p class="govuk-body govuk-!-margin-bottom-2">{{ commonContent[htmlLang].contactUs.telephone.Scotland.ibca.availability }}</p>
-          <p class="govuk-body">
-              <a rel="noopener noreferrer" class="govuk-link" href="https://www.gov.uk/call-charges" target="_blank">{{ commonContent[htmlLang].contactUs.telephone.Scotland.ibca.charges }}</a>
-          </p>
-          <p class="govuk-body govuk-!-margin-bottom-2">{{ commonContent[htmlLang].contactUs.telephone.Scotland.ibca.emailText }}
-              <a href="mailto:{{ commonContent[htmlLang].contactUs.telephone.Scotland.ibca.emailAddress }}" class="govuk-link">{{ commonContent[htmlLang].contactUs.telephone.Scotland.ibca.emailAddress }}</a>
-          </p>
-
           {% if ((htmlLang == "en") or (htmlLang == "cy" and welshWebchatEnabled))  %}
-          <h3 class="govuk-heading-s govuk-!-margin-bottom-0">{{ commonContent[htmlLang].contactUs.telephone.England.ibca.desc }}</h3>
+          {% if allowNiEnabled %}
+            <h3 class="govuk-heading-s govuk-!-margin-bottom-0">{{ commonContent[htmlLang].contactUs.telephone.England.ibca.descNI }}</h3>
+            {% else%}
+            <h3 class="govuk-heading-s govuk-!-margin-bottom-0">{{ commonContent[htmlLang].contactUs.telephone.England.ibca.desc }}</h3>
+          {% endif %}
           <p class="govuk-body govuk-!-margin-bottom-0">{{ commonContent[htmlLang].contactUs.telephone.England.ibca.phone }}</p>
           <p class="govuk-body govuk-!-margin-bottom-0">{{ commonContent[htmlLang].contactUs.telephone.England.ibca.availability }}</p>
           <p class="govuk-body govuk-!-margin-bottom-2">{{ commonContent[htmlLang].contactUs.telephone.England.ibca.saturdayAvailability }}</p>
@@ -69,6 +63,20 @@
               <a href="mailto:{{ commonContent[htmlLang].contactUs.telephone.England.ibca.emailAddress }}" class="govuk-link">{{ commonContent[htmlLang].contactUs.telephone.England.ibca.emailAddress }}</a>
           </p>
           {% endif %}
+
+          {% if allowNiEnabled %}
+          <h3 class="govuk-heading-s govuk-!-margin-bottom-0">{{ commonContent[htmlLang].contactUs.telephone.Scotland.ibca.descNI }}</h3>
+          {% else%}
+          <h3 class="govuk-heading-s govuk-!-margin-bottom-0">{{ commonContent[htmlLang].contactUs.telephone.Scotland.ibca.desc }}</h3>
+          {% endif %}
+          <p class="govuk-body govuk-!-margin-bottom-0">{{ commonContent[htmlLang].contactUs.telephone.Scotland.ibca.phone }}</p>
+          <p class="govuk-body govuk-!-margin-bottom-2">{{ commonContent[htmlLang].contactUs.telephone.Scotland.ibca.availability }}</p>
+          <p class="govuk-body">
+              <a rel="noopener noreferrer" class="govuk-link" href="https://www.gov.uk/call-charges" target="_blank">{{ commonContent[htmlLang].contactUs.telephone.Scotland.ibca.charges }}</a>
+          </p>
+          <p class="govuk-body govuk-!-margin-bottom-2">{{ commonContent[htmlLang].contactUs.telephone.Scotland.ibca.emailText }}
+              <a href="mailto:{{ commonContent[htmlLang].contactUs.telephone.Scotland.ibca.emailAddress }}" class="govuk-link">{{ commonContent[htmlLang].contactUs.telephone.Scotland.ibca.emailAddress }}</a>
+          </p>
 
           <h3 class="govuk-heading-s govuk-!-margin-bottom-0">{{ commonContent[htmlLang].contactUs.telephone.WelshSpeakers.ibca.desc }}</h3>
           <p class="govuk-body govuk-!-margin-bottom-0">{{ commonContent[htmlLang].contactUs.telephone.WelshSpeakers.ibca.phone }}</p>
