Suppress sonar resource integrity feature check

--- a/views/components/globals.html
+++ b/views/components/globals.html
@@ -23,14 +23,14 @@
 <script 
     type="text/javascript" 
     src="https://js-cdn.dynatrace.com/jstag/17177a07246/bf00910jpo/16f5f964ab6c179f_complete.js" 
-    crossorigin="anonymous">
+    crossorigin="anonymous"><!-- Sensitive -->
 </script>
 {% else %}
   <!-- Dynatrace manual injection snippet (noscript) -->
   <script 
       type="text/javascript" 
       src="https://js-cdn.dynatrace.com/jstag/17177a07246/bf24054dsx/5757482cea762c9_complete.js" 
-      crossorigin="anonymous">
+      crossorigin="anonymous"><!-- Sensitive -->
   </script>
   <!-- End Dynatrace manual injection snippet (noscript) -->
 {% endif %}
