update language toggle

--- a/views/components/phase_banner.njk
+++ b/views/components/phase_banner.njk
@@ -18,7 +18,7 @@
             {{ content.phaseBar.feedback | replace('{{smartSurveyFeedbackUrl}}', urlPath) | safe }}
 
             {% if featureToggles.welsh() == "true" %}
-                {{ content.phaseBar.languageToggle | safe }}
+                <a href="{{ content.phaseBar.languageToggle.link }}" class="govuk-link language">{{ content.phaseBar.languageToggle.text }}</a>
             {% endif %}
         {% endset %}
 
